--- a/package.json
+++ b/package.json
@@ -1,5 +1,11 @@
 {
   "scripts": {
     "test": "jest"
+  },
+  "dependencies": {
+    "express": "^4.16.4",
+    "getconfig": "^4.5.0",
+    "jest": "^23.6.0",
+    "twilio": "^3.25.0"
   }
 }
